# prefixcommons-py

./: .gitignore  .travis.yml  Makefile  README.rst  bump.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pypi-release.yaml  tests.yml
prefixcommons/: __init__.py  curie_transformer.py  curie_util.py
tests/: ids.tsv  test_csv.py  test_curie_util.py
