[tool.poetry]
name = "prefixcommons"
version = "0.1.12"
description = "A python API for working with ID prefixes"
authors = ["cmungall <cjm@berkeleybop.org>"]
readme = "README.rst"

homepage = "https://github.com/prefixcommons/prefixcommons-py"

repository = "https://github.com/prefixcommons/prefixcommons-py"

packages = [
    { include = "prefixcommons" }
]

keywords=["ontology", "graph", "obo", "owl", "sparql", "networkx", "network"]

classifiers=[
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
click = "^8.1.3"
PyYAML = "^6.0"
curies = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-logging = "^2015.11.4"
requests = ">=2.28.1"
click = ">=8.1.3"
PyYAML = ">=6.0"
curies = ">=0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true
